# k8s-helpers

./: README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
k8s_helpers/: __init__.py  main.py
k8s_helpers/commands/: debug.py  delpods.py  node_analysis.py  podcount.py  resource_analysis.py
k8s_utils/: main.py
k8s_utils/commands/: __init__.py  podcount.py
