[project]
name = "k8s-helpers"
version = "0.1.0"
description = "Collection of Kubernetes command-line utilities"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12.0",
    "kubernetes>=30.0.0",
    "rich>=13.0.0",
]

[project.scripts]
k8sh = "k8s_helpers.main:app"
k8s-helpers = "k8s_helpers.main:app"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
